Bug 509163 - "SeaMonkey 2 beta dock icon (showing new emails) does not reset" [r=bienvenu sr+a=Standard8]